<resources>
    <!--    app massage-->
    <string name="app_name">Utopia Server Status</string>
    <string name="title_home">Home</string>
    <string name="title_servers">Servers</string>
    <string name="title_about">About</string>
    <string name="title_activity_licences">Licenses</string>
    <string name="title_server">Server Info</string>

    <!--    display strings-->
    <string name="welcome">Welcome to USS</string>
    <string name="rights" translatable="false">Copyright © 2022 UtopiaXC All Rights Reserved.</string>
    <string name="address_title">Server Status Address</string>
    <string name="address_set_alert">You should fill the address and tap confirm</string>
    <string name="address_example" translatable="false">https://example.com/</string>
    <string name="address_help">You need to enter the front-end access address of the open source project ServerStatus-Hotaru deployed on your server.\n Note that you must have SSL enabled, i.e. your address must start with "https://".</string>
    <string name="address_format_wrong">The format of your address is wrong.</string>
    <string name="address_invalid">Address invalid, Please confirm if your address is your ServerStatus-Hotaru address.</string>
    <string name="background_notification">USS is running in background</string>
    <string name="background_service_error">Background Server Error and Shutdown</string>
    <string name="cache_clear_confirm">Sure to clean up all server data?</string>
    <string name="no_server_to_show">No server to show</string>
    <string name="background_notification_title">Background Notification</string>
    <string name="server_alert_notification">Server Alert Notification</string>
    <string name="uptime">Uptime</string>
    <string name="not_agree_privacy_alert">You must choose agree.</string>

    <!--    titles-->
    <string name="confirm">Confirm</string>
    <string name="sorry">Sorry</string>
    <string name="cancel">Cancel</string>
    <string name="succeed">Succeed</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="alert">Alert</string>
    <string name="help">Help</string>
    <string name="tips">Tips</string>
    <string name="wait">Wait</string>
    <string name="settings">Settings</string>


    <!--    about-->
    <string name="version">Version</string>
    <string name="changelog">Change Log</string>
    <string name="licenses">License</string>
    <string name="author">Author</string>
    <string name="follow_on_github">Follow on GitHub</string>
    <string name="follow_on_gitlab">Follow on GitLab</string>
    <string name="feedback_by_email">Feedback by Email</string>
    <string name="changelog_title">Change Log(Please wait for GitHub)</string>
    <string name="feedback_subject">Feedback For Utopia Server Status</string>
    <string name="clear_cache">Clear data cache</string>

    <!--settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="web_address">API Address</string>
    <string name="background_service">Enable Background Service</string>
    <string name="background_service_title">Background Service</string>
    <string name="system">System</string>
    <string name="enable_server_list_as_start_page">Use Server List as Start Page</string>
    <string name="update_status_interval">Update Status Interval</string>
    <string name="archive_time">Archive keeping time</string>
    <string name="start_with_boot">Start with system boot</string>
    <string name="notification">Notification</string>
    <string name="notification_switch">Allow Notification</string>
    <string name="system_load">System Load</string>
    <string name="system_load_description">Alert when system overload.</string>
    <string name="system_load_threshold">System Load Threshold</string>
    <string name="cpu_load">CPU Load</string>
    <string name="cpu_load_description">Alert when CPU overload.</string>
    <string name="cpu_load_threshold">CPU Load Threshold</string>
    <string name="memory_load">Memory Load</string>
    <string name="memory_load_description">Alert when memory overload.</string>
    <string name="memory_load_threshold">Memory Load Threshold</string>
    <string name="disk_load">Disk Load</string>
    <string name="disk_load_description">Alert when disk overload.</string>
    <string name="disk_load_threshold">Disk Load Threshold</string>
    <string name="same_overload_alert_interval">Notification of event duration</string>
    <string name="server_offline_description">Alert when server offline</string>
    <string name="server_offline">Server Offline</string>

    <!--    Home Tags-->
    <string name="home_normal">Normal</string>
    <string name="home_offline">Offline</string>
    <string name="home_system_overload">System Overload</string>
    <string name="home_cpu_overload">Cpu Overload</string>
    <string name="home_memory_overload">Memory Overload</string>
    <string name="home_disk_overload">Disk Exhausted</string>

    <!--    Server List-->
    <string name="server_load_title">Server Load:</string>

    <!--    Server Activity-->
    <string name="server_activity_load_title">Server Load:</string>
    <string name="server_activity_cpu_load_title">CPU Load:</string>
    <string name="server_activity_memory_load_title">Memory Load:</string>
    <string name="server_activity_disk_load_title">Disk Load:</string>
    <string name="memory">Memory</string>
    <string name="cpu">CPU</string>
    <string name="swap">SWAP</string>
    <string name="disk">Disk</string>
    <string name="used">Used</string>
    <string name="total">Total</string>
    <string name="network">Network</string>
    <string name="realtime">Now</string>
    <string name="upload">Download</string>
    <string name="download">Upload</string>
    <string name="export_report">Export archive data (csv)</string>
    <string name="export_report_header">Server Name,Server Type,Server Location,Server Region,Server Ipv4 Online,Server Ipv6 Online,Server Uptime,Server Load,Server Realtime Network Download Speed,Server Realtime Network Upload Speed,Server Network In,Server Network Out,Server CPU Load,Server Total Memory,Server Used Memory,Server Used Memory Ratio,Server Total Swap,Server Used Swap,Server Used Swap Ratio,Server Total Disk,Server Used Disk,Server Used Disk Ratio,Server Status Timestamp\n</string>

    <!--    Privacy Policy-->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content">This software is open source software. \nThis software does not collect any personal information and does not request any sensitive permissions. \nThis software only saves the required data for local storage, and does not transfer or upload data. \nThe user has the right to delete any data saved locally by this software at any time.</string>
    <string name="agree">Agree</string>

</resources>