<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.utopiaxc.serverstatus.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_server_list"
        android:name="com.utopiaxc.serverstatus.fragments.ServerListFragment"
        android:label="@string/title_servers"
        tools:layout="@layout/fragment_server_list" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.utopiaxc.serverstatus.fragments.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>