<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddressFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.AddressFragment">

    <TextView
        android:id="@+id/textViewAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/address_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmitAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="350dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitAddress"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddressHelp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddressTitle"
        android:hint="@string/address_example"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/buttonAddressHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="#00000000"
        android:src="@drawable/ic_baseline_help_outline_24"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextAddress"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddressTitle"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>